GRID BUILD ON LOAD, SIMPLE COLOUR AND RESETSTYLE.CSS
Function to build the grid in the container on page load made and an
event listener added to the window.

A simple colour function to colour grid cells in on mouseover added.

Added resetstyle.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Etch-A-Sketch</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="resetstyle.css">
     </head>
     <body>
         <h1>Etch-A-Sketch</h1>
@@ -17,7 +18,7 @@
                 <button id="greyScale">Grey Scale</button>
                 <button id="rainbow">Rainbow</button>
                 <label for="colour">Pick your own:</label>
-                <input type="color" name="colour" id="colour">
+                <input type="color" name="colour" id="picker">
                 <h3>Eraser</h3>
                 <button id="clearGrid">The Whole Grid</button>
                 <button id="eraser">Just a bit of it</button>
