ADD OPTION TO COLOUR ON CLICK
Added buttons to html to be able to choose to either colour on
click or on mouseover. CSS styling added to have buttons inline
with the rest of the user selection options.

Added eventlistener to grid cells to be able to colour on click
and added an if statement to both event listeners on grid cells to
return if not current selected drawing method.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                     <button id="eraser" data-click="colour">Just a bit of it</button>
                     <button class="clearGrid" data-click="clear-grid">The Whole Grid</button>
                 </div>
+                <h3>How to draw</h3>
+                <div class="howToDraw">
+                    <button  class="drawOnClick" data-click="draw-on-click">One cell at a time</button>
+                    <button  class="drawOnMouseover" data-click="draw-on-mouseover">Big brush strokes</button>
+                </div>
             </section>
         </main>
     </body>
